test/tests/compiler/from_to/to_unknown_scheme.txt
error: unsupported scheme `unknown`
 --> tests/compiler/from_to/to_unknown_scheme.tql:5:5
  |
5 | to "unknown://example.org"
  |     ^^^^^^^ 
  |
  = note: supported schemes for deduction: `amqp`, `amqps`, `elasticsearch`, `email`, `file`, `fluent-bit`, `ftp`, `ftps`, `http`, `https`, `inproc`, `kafka`, `mailto`, `opensearch`, `s3`, `smtp`, `smtps`, `sqs`, `tcp`, `udp`, `zmq`
  = docs: https://docs.tenzir.com/reference/operators/to
